--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title> JAVASCRIPT PRUEBA </title>
     </head>
 </body>
-Tienda
+<script>
+    var nombre = prompt('Introduzca su nombre');
+    document.write(nombre);
+    </script>
 </body>
 </html>
