--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title> JAVASCRIPT PRUEBA </title>
     </head>
 </body>
+Hola hola
 <script>
     var nombre = prompt('Introduzca su nombre');
     document.write(nombre);
