--- a/scripts/practica1.html
+++ b/scripts/practica1.html
@@ -2,12 +2,22 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Tipos de script  </title>
+<title> Tipos de script  </title>
 </head>
 <body>
 <h1> TIPOS DE DATOS </h1>
 <hr>
 <h2> SCRPIT INTERNO </h2>
+<script> 
+let name, lastname;
+name=prompt('Introduzca su nombre');
+lastname=prompt('Intoduzca su apellido');
+document.write('Bienvenido@', name, ' ', lastname);
+
+
+
+</script>
+
 
 </body>
 
