--- a/scripts/practica1.html
+++ b/scripts/practica1.html
@@ -7,7 +7,7 @@
 <body>
 <h1> TIPOS DE DATOS </h1>
 <hr>
-<h2> SCRPIT INTERNO </h2>
+<h2> SCRIPT INTERNO </h2>
 <script> 
 let name, lastname;
 name=prompt('Introduzca su nombre');
