--- a/scripts/pratica2.html
+++ b/scripts/pratica2.html
@@ -14,7 +14,7 @@ let cumple=prompt('Introduzca su fecha de nacimiento');
 let edad=prompt('Introduzca su edad');
 let masco=prompt('¿Tienes mascotas?');
 let opcion=prompt('Si tienes mascotas, indica si son perros o gatos ');
-document.write('Hola :)', ' ', 'te llamas' , ' ' , nom, ' ' , 'cumples el', ' ', cumple, ' ', 'tienes', " ", edad,  ' ', 'y tienes',' ' ,  opcion );
+document.write('Hola :)', ' ', 'te llamas' , ' ' , nom, ' ' , 'cumples el', ' ', cumple, ' ', 'por lo tanto tienes', ' ' , edad,  ' ', 'y tienes',' ' ,  opcion );
 document.write('<br>Gracias por responder');
 </script>
 </body>
