--- a/js/index.html
+++ b/js/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html> 
 <head> 
-<script src="script1.js"> </script> 
+<script src="script2.js"> </script> 
 <title>External Script</title> 
 </head>
+<body> 
+    <script src="script1.js"> </script> 
+    <title>External Script</title> 
+</body>
 </html>
